# seed-warp-sqlx-postgres

./: Cargo.toml  Makefile.toml  README.md
backend/: Cargo.toml
backend/src/: db.rs  errors.rs  filters.rs  handlers.rs  main.rs  models.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/pkg/: package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm
frontend/src/: lib.rs
src/: lib.rs  main.rs
