[package]
name = "myperson"
version = "0.1.0"
authors = ["LéonGGX <lgengoux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
    "backend",
    "frontend",
]
