# /client/Cargo.toml
[package]
name = "frontend"
version = "0.1.0"
authors = ["Léon GENGOUX <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.7.0"
serde = { version = "^1.0.114", features = ['derive'] }
wasm-bindgen = "0.2.67"
web-sys = "0.3.44"

myperson = { path = ".." }








